--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": ">=5.6.4",
         "barryvdh/laravel-dompdf": "^0.8.0",
+        "dompdf/dompdf": "^0.8.6",
         "intervention/image": "^2.3",
         "laravel/framework": "5.4",
         "laravel/tinker": "~1.0",
